elysium/0x53CE47cbe7F2be0AEcD086a70182A98c907D024d/result.txt
Using network 'develop'.

/workdir/truffle_example/elysium/0x53CE47cbe7F2be0AEcD086a70182A98c907D024d/EasyMineIcotest.js:1105
      result[138] = await instance.This transaction includes data in the Input Data field which may indicate a message in UTF-8({from: accounts[14], value: web3.utils.toWei("0.760725")})
                                        ^^^^^^^^^^^

SyntaxError: Unexpected identifier
    at new Script (node:vm:100:7)
    at Object.createScript (node:vm:257:10)
    at Object.file (/usr/local/lib/node_modules/truffle/build/webpack:/packages/require/require.js:93:1)
    at Object.exec (/usr/local/lib/node_modules/truffle/build/webpack:/packages/require/require.js:121:1)
    at node:internal/util:360:7
    at new Promise (<anonymous>)
    at bound exec (node:internal/util:346:12)
    at Object.module.exports [as run] (/usr/local/lib/node_modules/truffle/build/webpack:/packages/core/lib/commands/exec/run.js:43:1)
    at processTicksAndRejections (node:internal/process/task_queues:96:5)
    at runCommand (/usr/local/lib/node_modules/truffle/build/webpack:/packages/core/lib/command-utils.js:184:1)
Truffle v5.5.23 (core: 5.5.23)
Node v16.16.0
